[fix]: pom deploy